<resources>
    <string name="app_name">Weather</string>
    <string name="app_terms_link">https://onedrive.live.com/view.aspx?resid=D27DD8466775BA4B!389843&amp;ithint=file%2cdocx&amp;authkey=!ANTqau6gwwRDTHk</string>

    <string name="stg_terms" translatable="false">terms</string>
    <string name="stg_about" translatable="false">about</string>
    <string name="stg_pro" translatable="false">pro</string>
    <string name="stg_rate" translatable="false">rate</string>
    <string name="stg_support" translatable="false">support</string>

    <string name="stg_temp" translatable="false">temp</string>
    <string name="stg_wind_speed" translatable="false">wind</string>
    <string name="stg_pressure" translatable="false">pressure</string>

    <string name="txt_warn">Warning</string>
    <string name="txt_no_loc_permissions">You did not accept permission for location detection. You can turn it on manually through Settings -> Applications -> This application -> Permissions</string>
    <string name="txt_dismiss">Dismiss</string>

    <string name="txt_oops">Oops, something went wrong, try again later.</string>
    <string name="txt_err_no_network">Please connect to the Internet and try again.</string>
    <string name="txt_upgrade_connectin">Your connection now seems bad. Please try again later</string>
    <string name="txt_oops_loading_html">Oops, we can\'t load your content</string>
    <string name="error_txt_no_mail">Oops you don\'t have any app to send email</string>
    <string name="error_open_google_play">Sorry, we can\'t open Google Play on your device. Please make sure Google Play Services are installed and there is available Internet connection.</string>
    <string name="txt_err_upgrade">Sorry unexpected error has occurred. Please make sure your device is connected with an active Google account and has the latest version of Google Play Services.</string>
    <string name="txt_worning_pro_done">Successful payment</string>


    <string name="txt_no_loc">Location service is disabled. Please turn it on from device settings</string>
    <string name="txt_enable">Open settings</string>

    <string name="txt_details">Details</string>
    <string name="txt_next_days">Weather for next 10 days</string>
    <string name="txt_detailed">Detailed</string>

    <string name="txt_wind">Wind</string>
    <string name="txt_uv">Uv index</string>
    <string name="txt_feels">Feels like</string>
    <string name="txt_press">Pressure</string>
    <string name="txt_hum">Humidity</string>
    <string name="txt_vis">Visibility</string>
    <string name="txt_weather_24">Weather for 24 hours</string>

    <string name="txt_today">Today</string>
    <string name="txt_tomorrow">Tomorrow</string>

    <string name="txt_my_loc">My locations</string>
    <string name="txt_no_places">No locations yet</string>
    <string name="txt_no_places_hint">But you can add new one really quick</string>

    <string name="txt_del_loc">Are you sure to delete this location?</string>
    <string name="txt_no_data">No data available</string>

    <string name="txt_settings">Settings</string>
    <string name="txt_setting_legal">Legal info</string>
    <string name="txt_about">About</string>
    <string name="txt_terms">Terms &amp; conditions</string>

    <string name="txt_pro">PRO features</string>

    <string name="rate_us">Rate us</string>
    <string name="supp">Leave a feedback</string>
    <string name="txt_mesre">Measures units</string>
    <string name="txt_mes_temp">Temperature</string>
    <string name="txt_mes_speed">Wind speed</string>
    <string name="txt_mes_press">Pressure</string>

    <string name="txt_interaction">Interaction</string>
    <string name="txt_det_weather">Detailed weather</string>

    <string name="txt_ask_loc">We need you to allow location detection for you are or you can set it manually</string>
    <string name="txt_allow">Allow</string>
    <string name="txt_set_manually">Set manually</string>

    <string name="txt_def_notific">Check out your new update</string>
    <string name="txt_fake_from" translatable="false">Best apps</string>
    <string name="txt_fake_msg" translatable="false">Try out our new app on Google Play!</string>

    <string name="txt_no_ads">No ads for life</string>
    <string name="txt_no_lock">Unlock 24 hours weather</string>
    <string name="txt_buy_all">No ads + unlock 24 hours weather</string>
    <string name="txt_buy_now">Buy now for</string>
    <string name="txt_buy_deal">Save 25%</string>

    <string name="txt_price_int_ads">$1</string>
    <string name="txt_price_float_ads">99</string>
    <string name="txt_price_int_full">$1</string>
    <string name="txt_price_float_full">99</string>
    <string name="txt_price_end_cur"></string>

</resources>